src/objects/FieloAlpha__Member__c.object
<CustomObject>
    <customHelpPage>FieloPLT__MemberHelpBackEnd</customHelpPage>
    <fields>
        <fullName>FieloPLT__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Age__c</fullName>
        <description>Age of the member</description>
        <formula>IF ( OR ( MONTH (  FieloPLT__Birthdate__c  ) &gt; MONTH (TODAY()), AND( MONTH ( FieloPLT__Birthdate__c ) = MONTH (TODAY()), DAY ( FieloPLT__Birthdate__c ) &gt;= DAY (TODAY()+1))), YEAR (TODAY()) - YEAR ( FieloPLT__Birthdate__c ) -1, YEAR (TODAY()) - YEAR ( FieloPLT__Birthdate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter the age of the member.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__AgreementReadOnly__c</fullName>
        <description>Shows and allows member to check the current Agreement</description>
        <formula>HYPERLINK(&apos;/&apos; +  FieloPLT__Agreement__c , FieloPLT__Agreement__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link for the agreement checked by the member</description>
        <label>Agreement</label>
        <referenceTo>FieloPLT__Agreement__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ApprovedReadOnly__c</fullName>
        <formula>IF(  FieloPLT__Approved__c , IMAGE(&apos;/resource/&apos;+IF(NOT(ISBLANK($Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c)), $Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c + &apos;__&apos;, &apos;&apos;)+&apos;images/checked.png&apos;, $Label.FieloPLT__Approved) , IMAGE(&apos;/resource/&apos;+IF(NOT(ISBLANK($Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c)), $Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c + &apos;__&apos;, &apos;&apos;)+&apos;images/unchecked.png&apos;, $Label.FieloPLT__NotApproved) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The approval status of this member. If you do not have an approval process, the status will be always &quot;Yes&quot;.</description>
        <inlineHelpText>If you have an approval process for your members registration, the approval status is reflected in this field. If you do not have an approval process, the status will be always “Yes”.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Birthdate__c</fullName>
        <description>Birth date of the member</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__City__c</fullName>
        <description>Residence of the member</description>
        <inlineHelpText>Enter the city where the member lives.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Country__c</fullName>
        <description>Residence of the member</description>
        <inlineHelpText>Enter the country where the member lives.</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__DaysLastTransaction__c</fullName>
        <description>Quantity of days from last transaction</description>
        <formula>TODAY()  -  FieloPLT__LastTransactionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Transaction (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Email__c</fullName>
        <description>Email of the member</description>
        <inlineHelpText>If you do not enter an email account, the system will create one of the form &quot;name.lastname@fielo.com&quot;.</inlineHelpText>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FieloPLT__EnabledStatusReadOnly__c</fullName>
        <formula>IF( FieloPLT__Enabled__c , IMAGE(&apos;/resource/&apos;+IF(NOT(ISBLANK($Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c)), $Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c + &apos;__&apos;, &apos;&apos;)+&apos;images/checked.png&apos;, $Label.FieloPLT__Enabled) , IMAGE(&apos;/resource/&apos;+IF(NOT(ISBLANK($Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c)), $Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c + &apos;__&apos;, &apos;&apos;)+&apos;images/unchecked.png&apos;, $Label.FieloPLT__NotEnabled) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enabled Status (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this member participates of the program. &quot;Enabled&quot; members are members participating of the program; &quot;Not enabled&quot; members no longer participate of the program.</description>
        <inlineHelpText>All members are “Enabled” by default. When members are “Not enabled” they no longer participate of the program but they still remain members.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FieloAccountStatus__c</fullName>
        <description>Describe the status of the member</description>
        <inlineHelpText>Approved: The member is approved. It has no user.
Pending Approved: The member is pending for approval
Completed: The registration process is completed. It there is a site, the user is created.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FirstName__c</fullName>
        <description>First Name of the member</description>
        <inlineHelpText>Enter the first name of this member.</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Gender__c</fullName>
        <description>Gender of the member</description>
        <inlineHelpText>Enter the gender for this member.</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IdentificationCode__c</fullName>
        <description>This field has to be filled depending on the information selected on Information Type (CPF o Passport)</description>
        <inlineHelpText>Here you can see the ID number of this member.</inlineHelpText>
        <label>Identification Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloPLT__IdentificationType__c</fullName>
        <description>Once an Identification Type is selected, Identification Code has to be informed with the respective code</description>
        <inlineHelpText>Pick the type of personal document of this member.</inlineHelpText>
        <label>Identification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Identification__c</fullName>
        <formula>TEXT( FieloPLT__IdentificationType__c )  +  FieloPLT__IdentificationCode__c</formula>
        <label>Identification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsActive__c</fullName>
        <description>Status of the member</description>
        <formula>IF( FieloPLT__User__r.IsActive == True, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsManager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the Member is a Manager for the Organization Account that belongs to</description>
        <inlineHelpText>This field indicates if the Member is a Manager for the Organization Account that belongs to</inlineHelpText>
        <label>Is Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__LastName__c</fullName>
        <description>Last Name of the member</description>
        <inlineHelpText>Enter the last name of this member.</inlineHelpText>
        <label>Last Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__LastTransactionDateReadOnly__c</fullName>
        <description>Formula field to get the last transaction date</description>
        <formula>FieloPLT__LastTransactionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Transaction Date (Read Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__LastTransactionDate__c</fullName>
        <description>Last date since member has done his last transaction</description>
        <inlineHelpText>Enter the date of the last transaction performed by this member.</inlineHelpText>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__LevelReadOnly__c</fullName>
        <formula>FieloPLT__Level__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Taken from the Level object, describes the category of a member</description>
        <inlineHelpText>Here you can see to what level the member belongs.</inlineHelpText>
        <label>Level</label>
        <referenceTo>FieloPLT__Level__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__LoyaltyAge__c</fullName>
        <description>Deprecated Field</description>
        <formula>(MONTH(TODAY()) + YEAR(TODAY()) * 12) - ( MONTH(FieloPLT__StartDate__c) + YEAR(FieloPLT__StartDate__c)* 12 ) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zz_deprecated_Loyalty Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__MediaPoints__c</fullName>
        <label>Points Average</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__MemberCodeReadOnly__c</fullName>
        <formula>FieloPLT__MemberCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Code (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__MemberCode__c</fullName>
        <description>Deprecated Field</description>
        <externalId>true</externalId>
        <label>zz_deprecated_Member Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloPLT__MobilePhone__c</fullName>
        <description>Phone number</description>
        <inlineHelpText>Enter the cell phone of the member.</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Name__c</fullName>
        <description>Name of the member</description>
        <formula>if (RecordType.DeveloperName == &apos;OrganizationAccount&apos;, FieloPLT__OrganizationName__c  ,  FieloPLT__FirstName__c  &amp;&apos; &apos; &amp; FieloPLT__LastName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Neighborhood__c</fullName>
        <description>Residence of the member</description>
        <inlineHelpText>Enter the neighborhood where the member lives.</inlineHelpText>
        <label>Neighborhood</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__OrganizationAccountName__c</fullName>
        <description>This field shows the name of the organization account related to the member</description>
        <formula>FieloPLT__OrganizationAccount__r.FieloPLT__OrganizationName__c</formula>
        <label>Organization Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__OrganizationAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The member must be of type &apos;Organization Account&apos; and must belong to the same program</errorMessage>
            <filterItems>
                <field>FieloPLT__Member__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Organization Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Members (Organization Account)</relationshipLabel>
        <relationshipName>FieloAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__OrganizationName__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>BackEnd</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FrontEnd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Phone__c</fullName>
        <description>Phone of the member</description>
        <inlineHelpText>Enter the member&apos;s phone number.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PointsReadOnly__c</fullName>
        <description>Formula for grouping all available points</description>
        <formula>FieloPLT__Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points (Read Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Points earned by the user</description>
        <inlineHelpText>Here you can see the number of points of this member.</inlineHelpText>
        <label>Points</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Preference__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Preference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ProfileCompletenessReadOnly__c</fullName>
        <description>Formula to get the profile completness</description>
        <formula>FieloPLT__ProfileCompleteness__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Completeness (Read Only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ProfileCompleteness__c</fullName>
        <description>Allows to have a percentage about completness of all profile fields.</description>
        <inlineHelpText>Here you can see how complete is the member&apos;s profile.</inlineHelpText>
        <label>Profile completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this member belongs.</description>
        <inlineHelpText>Select the program to which the member belongs</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RedeemPointsPercent__c</fullName>
        <description>The percentage of points redeemed by this member.</description>
        <label>RedeemPointsPercent</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ReferalMemberReadOnly__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  FieloPLT__ReferalMember__c ,  FieloPLT__ReferalMember__r.FieloPLT__Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referal Member (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ReferalMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referal Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Members Referrals</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RegisteredReadOnly__c</fullName>
        <formula>IF( FieloPLT__Registered__c , IMAGE(&apos;/resource/&apos;+IF(NOT(ISBLANK($Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c)), $Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c + &apos;__&apos;, &apos;&apos;)+&apos;images/checked.png&apos;, $Label.FieloPLT__Registered) , IMAGE(&apos;/resource/&apos;+IF(NOT(ISBLANK($Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c)), $Setup.FieloPLT__PublicSettings__c.FieloPLT__PackagePrefix__c + &apos;__&apos;, &apos;&apos;)+&apos;images/unchecked.png&apos;, $Label.FieloPLT__NotRegistered) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Members are “Registered” if they have created an user in the members&apos; portal.</inlineHelpText>
        <label>Registered (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the member has created an user for the members&apos; portal.</description>
        <inlineHelpText>Members are “Registered” if they have created an user in the members&apos; portal.</inlineHelpText>
        <label>Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__StartDateReadOnly__c</fullName>
        <formula>FieloPLT__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date (Read Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date when this member registered in the program.</description>
        <inlineHelpText>Enter the date when the member registered in the program.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__State__c</fullName>
        <description>Residence of the member</description>
        <inlineHelpText>Enter the state or province where the member lives.</inlineHelpText>
        <label>State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <formula>IF(   $User.IsActive == false  ,  $Label.FieloPLT__Inactive , $Label.FieloPLT__Active )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loyalty Program Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Street__c</fullName>
        <description>Residence of the member</description>
        <inlineHelpText>Enter the street where the member lives.</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Synchronized__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Describes the data syncro between Fielo Account and CRM Account or Contact.</description>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TotalRedeemPoints__c</fullName>
        <description>Number of points redeedmed by this member.</description>
        <label>Total Redeem Points</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TotalRedeemValue__c</fullName>
        <description>Total transactions (in currency) realized by the member</description>
        <label>Total Redeem Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TotalRedeem__c</fullName>
        <description>Number of orders redeemed by this member.</description>
        <label>Total Redeem</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TotalTransactions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total transactions realized by the member</description>
        <inlineHelpText>Enter the number of transactions performed by this member.</inlineHelpText>
        <label>Total Transactions</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TotalValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Total Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Type__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Member</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UserReadOnly__c</fullName>
        <description>Formula link to user</description>
        <formula>HYPERLINK(&apos;/&apos; +  FieloPLT__User__c ,  FieloPLT__User__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User related to the member</description>
        <inlineHelpText>Enter the member&apos;s user or handle in the member&apos;s portal.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ZipCode__c</fullName>
        <description>Residence of the member</description>
        <inlineHelpText>Enter the member&apos;s ZIP code.</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__imageId__c</fullName>
        <description>The ID of the image uploaded by this member.</description>
        <inlineHelpText>Enter the ID of this member&apos;s image.</inlineHelpText>
        <label>imageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__User__c</columns>
        <columns>FieloPLT__LastTransactionDate__c</columns>
        <columns>FieloPLT__Name__c</columns>
        <columns>FieloPLT__Level__c</columns>
        <columns>FieloPLT__IdentificationType__c</columns>
        <columns>FieloPLT__IdentificationCode__c</columns>
        <columns>FieloPLT__Age__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__StartDate__c</columns>
        <columns>FieloPLT__Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__All_Members</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Program__c</columns>
        <columns>FieloPLT__Name__c</columns>
        <columns>FieloPLT__Email__c</columns>
        <columns>FieloPLT__PointsReadOnly__c</columns>
        <columns>FieloPLT__Level__c</columns>
        <columns>FieloPLT__User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__Argentina</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>FieloPLT__Age__c</columns>
        <columns>FieloPLT__Agreement__c</columns>
        <columns>FieloPLT__Birthdate__c</columns>
        <columns>FieloPLT__MobilePhone__c</columns>
        <columns>FieloPLT__City__c</columns>
        <columns>FieloPLT__Country__c</columns>
        <columns>FieloPLT__DaysLastTransaction__c</columns>
        <columns>FieloPLT__Email__c</columns>
        <columns>FieloPLT__Enabled__c</columns>
        <columns>FieloPLT__FirstName__c</columns>
        <columns>FieloPLT__Gender__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloPLT__Country__c</field>
            <operation>equals</operation>
            <value>Argentina</value>
        </filters>
        <label>Argentina</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__Birthdate</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Name__c</columns>
        <columns>FieloPLT__Level__c</columns>
        <columns>FieloPLT__MemberCode__c</columns>
        <columns>FieloPLT__Age__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__LoyaltyAge__c</columns>
        <columns>FieloPLT__StartDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloPLT__Birthdate__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Birthdate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__InactiveMembers</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__UserReadOnly__c</columns>
        <columns>FieloPLT__LastTransactionDateReadOnly__c</columns>
        <columns>FieloPLT__Name__c</columns>
        <columns>FieloPLT__LevelReadOnly__c</columns>
        <columns>FieloPLT__IdentificationType__c</columns>
        <columns>FieloPLT__IdentificationCode__c</columns>
        <columns>FieloPLT__MemberCode__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__LastTransactionDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloPLT__IsActive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filters>
        <label>Inactive Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__MembersWithoutUser</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>FieloPLT__Age__c</columns>
        <columns>FieloPLT__MobilePhone__c</columns>
        <columns>FieloPLT__City__c</columns>
        <columns>FieloPLT__Country__c</columns>
        <columns>FieloPLT__DaysLastTransaction__c</columns>
        <columns>FieloPLT__Email__c</columns>
        <columns>FieloPLT__Enabled__c</columns>
        <columns>FieloPLT__FirstName__c</columns>
        <columns>FieloPLT__Gender__c</columns>
        <columns>FieloPLT__LastName__c</columns>
        <columns>FieloPLT__Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloPLT__User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Members Without User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__My_Participants</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Name__c</columns>
        <columns>FieloPLT__Level__c</columns>
        <columns>FieloPLT__Age__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__StartDate__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Participants</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__New_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Name__c</columns>
        <columns>FieloPLT__Level__c</columns>
        <columns>FieloPLT__MemberCode__c</columns>
        <columns>FieloPLT__Age__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__LoyaltyAge__c</columns>
        <columns>FieloPLT__StartDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__New_This_Week</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Name__c</columns>
        <columns>FieloPLT__MemberCode__c</columns>
        <columns>FieloPLT__Age__c</columns>
        <columns>FieloPLT__Level__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__LoyaltyAge__c</columns>
        <columns>FieloPLT__StartDate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <recordTypes>
        <fullName>FieloPLT__IndividualAccount</fullName>
        <active>true</active>
        <description>Fielo Account that represents the participation of an individual person</description>
        <label>Individual Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__OrganizationAccount</fullName>
        <active>true</active>
        <description>Fielo Account that represents a organization (for example, company, household)</description>
        <label>Organization Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__OrganizationContributor</fullName>
        <active>true</active>
        <description>Represents a person assigned to an organization (for example, employees or household members)</description>
        <label>Organization Contributor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__BirthDate</fullName>
        <active>true</active>
        <errorConditionFormula>FieloPLT__Birthdate__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>FieloPLT__Birthdate__c</errorDisplayField>
        <errorMessage>Birth date cannot be greater than today</errorMessage>
    </validationRules>
</CustomObject>